# PPChem

./: .gitignore  PLAN.md  README.md  pyproject.toml
app/: streamlit_app.py
data/decks/: sample_decks.json
data/processed/: filter_report.json  import_report.json  import_report.sample.json  quiz_progress.json  reactions.sample.json  reactions.user.json
data/raw/: tpl_sample.csv
scripts/: convert_tpl.py  filter_mvp.py
src/ppchem/: __init__.py
src/ppchem/app/: __init__.py  quiz.py  quiz_progress.py  reaction_browser.py  reaction_sources.py  rendering.py
src/ppchem/curation/: __init__.py  mvp_filter.py
src/ppchem/decks/: __init__.py  deck_io.py  deck_mutations.py  deck_resolution.py  deck_schema.py  deck_transfer.py
src/ppchem/importers/: __init__.py  tpl_importer.py
src/ppchem/models/: __init__.py  reaction_io.py  reaction_schema.py
tests/: test_deck_io.py  test_deck_mutations.py  test_deck_resolution.py  test_deck_transfer.py  test_mvp_filter.py  test_quiz.py  test_quiz_progress.py  test_reaction_browser.py  test_reaction_io.py  test_reaction_sources.py  test_rendering.py  test_sample_decks.py  test_schema.py  test_tpl_importer.py
