[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppchem"
version = "0.1.0"
description = "Data layer and converter for an organic reaction learning app"
requires-python = ">=3.10,<3.11"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
chem = ["rdkit"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
